--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@
         </nav>
     </header>
 
+<nav class="container mx-auto px-4 py-4 flex justify-between items-center max-w-7xl">
+    <a href="#" class="flex items-center p-1 rounded-full bg-highlight-gold/20 shadow-inner">
+        <img src="1000256027.png" alt="BlissCraft Resin Logo" class="h-8 w-auto"> 
+    </a>
+    </nav>
+
+    
     <main>
         <!-- 1. Hero Section -->
         <section id="hero" class="relative overflow-hidden pt-20 pb-16 md:pt-32 md:pb-24 bg-secondary-teal/40">
