--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <nav class="container mx-auto px-4 py-4 flex justify-between items-center max-w-7xl">
     <a href="#" class="flex items-center p-1 rounded-full bg-highlight-gold/20 shadow-inner">
-        <img src="1000256027.png" alt="BlissCraft Resin Logo" class="h-8 w-auto"> 
+        <img src="IMG_20251118_135813.png" alt="BlissCraft Resin Logo" class="h-8 w-auto"> 
     </a>
     </nav>
 
