--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         </nav>
     </header>
 
-<nav class="container mx-auto px-4 py-4 flex justify-between items-center max-w-7xl">
-    <a href="#" class="flex items-center p-1 rounded-full bg-highlight-gold/20 shadow-inner">
-        <img src="IMG_20251118_135813.png" alt="BlissCraft Resin Logo" class="h-8 w-auto"> 
+<nav class="container mx-auto px-4 py-6 flex justify-center items-center max-w-7xl">
+    <a href="#" class="flex items-center p-3 rounded-2xl bg-primary-indigo/10 border border-highlight-gold/40 shadow-md hover:shadow-lg transition duration-300">
+        <img src="IMG_20251118_135813.png" alt="BlissCraft Resin Logo" class="h-16 w-auto drop-shadow-lg">
     </a>
-    </nav>
+</nav>
 
     
     <main>
