--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
     </header>
 
 <nav class="container mx-auto px-4 py-6 flex justify-center items-center max-w-7xl">
-    <a href="#" class="flex items-center p-3 rounded-2xl bg-primary-indigo/10 border border-highlight-gold/40 shadow-md hover:shadow-lg transition duration-300">
-        <img src="IMG_20251118_135813.png" alt="BlissCraft Resin Logo" class="h-16 w-auto drop-shadow-lg">
+    <a href="#" class="flex items-center p-4 rounded-3xl bg-primary-indigo/10 border border-highlight-gold/40 shadow-lg hover:shadow-xl transition duration-300">
+        <img src="IMG_20251118_135813.png" alt="BlissCraft Resin Logo" class="h-48 w-auto drop-shadow-xl">
     </a>
 </nav>
+
 
     
     <main>
