--- a/index.html
+++ b/index.html
@@ -168,19 +168,19 @@
                 <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4">
                     <!-- Placeholder 1: Keychain (A) - Indigo Primary Color -->
                     <div class="group relative rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
-                        <img src="https://placehold.co/400x300/1A237E/FFFFFF?text=Initial+Keychain+%27A%27" onerror="this.onerror=null;this.src='https://placehold.co/400x300/1A237E/FFFFFF?text=Initial+Keychain+%27A%27';" alt="Resin Initial Keychain Sample" class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-500">
+                        <img src="#" onerror="this.onerror=null;this.src='https://placehold.co/400x300/1A237E/FFFFFF?text=Initial+Keychain+%27A%27';" alt="Resin Initial Keychain Sample" class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-500">
                     </div>
                     <!-- Placeholder 2: Keychain (Heart) - Teal Secondary Color -->
                     <div class="group relative rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
-                        <img src="https://placehold.co/400x600/4DB6AC/333333?text=Heart+Keychain" onerror="this.onerror=null;this.src='https://placehold.co/400x600/4DB6AC/333333?text=Heart+Keychain';" alt="Resin Heart Shape Keychain Sample" class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-500">
+                        <img src="1763525067124.jpg" onerror="this.onerror=null;this.src='https://placehold.co/400x600/4DB6AC/333333?text=Heart+Keychain';" alt="Resin Heart Shape Keychain Sample" class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-500">
                     </div>
                     <!-- Placeholder 3: Keychain (Star) - Gold Highlight Color -->
                     <div class="group relative rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
-                        <img src="https://placehold.co/400x400/FFD700/333333?text=Star+Keychain" onerror="this.onerror=null;this.src='https://placehold.co/400x400/FFD700/333333?text=Star+Keychain';" alt="Resin Star Shape Keychain Sample" class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-500">
+                        <img src="1763525061078.jpg" onerror="this.onerror=null;this.src='https://placehold.co/400x400/FFD700/333333?text=Star+Keychain';" alt="Resin Star Shape Keychain Sample" class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-500">
                     </div>
                     <!-- Placeholder 4: Keychain (Rectangle) - Indigo Primary Color -->
                     <div class="group relative rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300 hidden lg:block">
-                        <img src="https://placehold.co/400x350/1A237E/FFFFFF?text=Rectangle+Keychain" onerror="this.onerror=null;this.src='https://placehold.co/400x350/1A237E/FFFFFF?text=Rectangle+Keychain';" alt="Resin Rectangle Keychain Sample" class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-500">
+                        <img src="1763525059064.jpg" onerror="this.onerror=null;this.src='https://placehold.co/400x350/1A237E/FFFFFF?text=Rectangle+Keychain';" alt="Resin Rectangle Keychain Sample" class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-500">
                     </div>
                 </div>
 
