--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-4">
                     <!-- Placeholder 1: Keychain (A) - Indigo Primary Color -->
                     <div class="group relative rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
-                        <img src="#" onerror="this.onerror=null;this.src='https://placehold.co/400x300/1A237E/FFFFFF?text=Initial+Keychain+%27A%27';" alt="Resin Initial Keychain Sample" class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-500">
+                        <img src="1763525059064.jpg" onerror="this.onerror=null;this.src='https://placehold.co/400x300/1A237E/FFFFFF?text=Initial+Keychain+%27A%27';" alt="Resin Initial Keychain Sample" class="w-full h-auto object-cover transform group-hover:scale-105 transition duration-500">
                     </div>
                     <!-- Placeholder 2: Keychain (Heart) - Teal Secondary Color -->
                     <div class="group relative rounded-xl overflow-hidden shadow-lg hover:shadow-xl transition duration-300">
