--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
      <link rel="icon" href="favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
+    <!-- Primary SEO -->
+  <title>BlissCraft Resin — Handmade Custom Resin Keychains | Surat</title>
+  <meta name="description" content="BlissCraft Resin — handmade custom resin keychains & gifts from Surat, Gujarat. Personalized shapes, glitter & pigments. Pricing ₹79–₹149. Order via WhatsApp." />
+  <link rel="canonical" href="https://skshahid0786.github.io/BlissCraft-Resin/" />
+
+  <!-- Social (Open Graph / Twitter) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="BlissCraft Resin — Handmade Custom Resin Keychains | Surat" />
+  <meta property="og:description" content="Handmade custom resin keychains & gifts from Surat. Personalized shapes, glitter, mica pigments. Pricing ₹79–₹149. Order via WhatsApp." />
+  <meta property="og:url" content="https://skshahid0786.github.io/BlissCraft-Resin/" />
+  <meta property="og:site_name" content="BlissCraft Resin" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="BlissCraft Resin — Handmade Custom Resin Keychains | Surat" />
+  <meta name="twitter:description" content="Handmade custom resin keychains & gifts from Surat. Personalized shapes, glitter, mica pigments. Pricing ₹79–₹149. Order via WhatsApp." />
+    
 
     
     <!-- Load Tailwind CSS -->
